--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
   </div>
 </div>
 <script type="text/javascript">
-  var booksView = new Vue({
+  new Vue({
         el: "#books-view",
         data: {
           books: []
