--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,11 +2,11 @@
 <html lang="en"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<!--  <meta charset="UTF-8">-->
-<!--  <script type="application/javascript" src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
-<!--  <script type="application/javascript" src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
+  <!--  <meta charset="UTF-8">-->
+  <!--  <script type="application/javascript" src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+  <!--  <script type="application/javascript" src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
 
-<!--  <link rel="stylesheet" type="text/css" href="bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css">-->
+  <!--  <link rel="stylesheet" type="text/css" href="bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css">-->
   <title>Best Books</title>
 </head>
 <body>
@@ -16,14 +16,15 @@
   <script type="application/javascript" src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script type="application/javascript" src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="">Best Books</a>
+    <a class="navbar-brand" href="/">Best Books</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
       </ul>
 
@@ -46,4 +47,5 @@
   </nav>
 </header>
 <body>
+</body>
 </html>
